--- a/encrypt/package.json
+++ b/encrypt/package.json
@@ -12,7 +12,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/commander": "^2.12.2",
     "@types/node": "^17.0.23",
     "typescript": "^4.6.3"
+  },
+  "dependencies": {
+    "commander": "^9.1.0"
   }
 }
