updated encryption program to store part lengths as single byte binary encoded

--- a/encrypt/.vscode/launch.json
+++ b/encrypt/.vscode/launch.json
@@ -7,7 +7,7 @@
 		{
 			"type": "pwa-node",
 			"request": "launch",
-			"name": "Launch Program",
+			"name": "encrypt",
 			"skipFiles": [
 				"<node_internals>/**"
 			],
@@ -15,7 +15,7 @@
 			"outFiles": [
 				"${workspaceFolder}/dist/*.js"
 			],
-			"args": [ "2021_taxes.csl", "-p", "s3cretpw", "-s" ]
+			"args": [ "test.txt", "-p", "secret", "-s" ]
 		}
 	]
 }
