Decrypt from file in place

--- a/encrypt/package.json
+++ b/encrypt/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc",
     "encrypt": "node dist/encrypt.js \"$@\"",
-    "decrypt": "node dist/decrypt.js $@"
+    "decrypt": "node dist/decrypt.js \"$@\""
   },
   "keywords": [],
   "author": "",
