--- a/encrypt/.vscode/launch.json
+++ b/encrypt/.vscode/launch.json
@@ -16,6 +16,19 @@
 				"${workspaceFolder}/dist/*.js"
 			],
 			"args": [ "test.txt", "-p", "secret", "-s" ]
+		},
+		{
+			"type": "pwa-node",
+			"request": "launch",
+			"name": "decrypt",
+			"skipFiles": [
+				"<node_internals>/**"
+			],
+			"program": "${workspaceFolder}/src/decrypt.ts",
+			"outFiles": [
+				"${workspaceFolder}/dist/*.js"
+			],
+			"args": [ "test.brad", "-p", "secret" ]
 		}
 	]
 }
