--- a/ts-init/package.json
+++ b/ts-init/package.json
@@ -7,13 +7,18 @@
     "build": "tsc",
     "watch": "tsc -w",
     "start": "node dist/index.js",
-    "start-dev": "ts-node src/index.ts"
+    "start:dev": "ts-node src/index.ts"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Brad Stell",
+  "license": "MIT",
   "devDependencies": {
+    "@types/node": "^18.15.11",
+    "@types/ramda": "^0.28.23",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.5"
+    "typescript": "^5.0.3"
+  },
+  "dependencies": {
+    "ramda": "^0.28.0"
   }
 }
